--- a/index.Rmd
+++ b/index.Rmd
@@ -12,7 +12,7 @@ I do this with a combination of qualitative and quantitative methods, primary am
 
 I am the co-director of the [ENDOW project](https://endowproject.github.io/), a collaborative network of social scientists undertaking cross-cultural comparative work. Right now, our main focus is a project investigating the dynamics of social networks and wealth inequality in small communities around the world, funded by the US National Science Foundation.
 
-I also lead the new [Rep²SI](https://rep2si.github.io/) project, funded by a Research Leadership Award from the [Leverhulme Trust](leverhulme.ac.uk/). 
+I also lead the new [Rep²SI](https://rep2si.github.io/) project, funded by a Research Leadership Award from the [Leverhulme Trust](https://www.leverhulme.ac.uk/). 
 
 I am currently an associate professor in the [Department of Methodology](https://www.lse.ac.uk/methodology) at the [London School of Economics & Political Science](https://www.lse.ac.uk/). Prior to that, I was an Omidyar Fellow at the [Santa Fe Institute](https://www.santafe.edu/) (and am now a member of the [external faculty](https://www.santafe.edu/people/profile/eleanor-power)). My PhD is from [Stanford University](https://anthropology.stanford.edu/), MSc from [University College London](https://www.ucl.ac.uk/anthropology/), and BA from [Brown University](https://www.brown.edu/). See more at my [departmental website](http://www.lse.ac.uk/Methodology/People/Academic-Staff/Eleanor-Power/Eleanor-Power).
 
